# openinfra

./: .dockerignore  .env.example  .env_old  .environ  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SHA256SUMS.txt  VALIDATION-REPORT.md  VERSION  compose.yaml  openinfra-validation-report-0.29.36.md  openinfra-validation-report-0.29.37.md  openinfra_build_backend.py  pyproject.toml  validation-summary.json
.github/: dependabot.yml
.github/workflows/: advanced-identity-oracle.yml  ci.yml  cloud-native-promotion.yml  contract-completeness.yml  dependency-review.yml  documentation-ga.yml  enterprise-capacity.yml  enterprise-scaleout-promotion.yml  ga-go-no-go.yml  multisite-chaos.yml  offline-runtime-licensing.yml  pra-pca-certification.yml  release-packaging.yml  release-security.yml  rsot-canonical.yml  support-readiness.yml
artifacts/quality-gate/: support-readiness.json  support-readiness.json.pub  support-readiness.json.sig
deploy/systemd/: openinfra-api.service
docker/: openinfra-runtime-smoke.py
docker/observability/: openinfra-alerts.yml  otel-collector.yaml  prometheus.yml  tempo.yaml
docker/pgadmin/: servers.json
docker/pgbouncer/: Dockerfile  entrypoint.sh
docker/postgresql/: 01-create-replication-role.sh  bootstrap-replication-role.sh  replica-entrypoint.sh
docs/: TRACEABILITY.md
docs/api/: openapi.yaml
docs/architecture/: ARCHITECTURE.md  enterprise-observability-capacity.md  ga-documentation-governance.md  high-performance-pro-enterprise.md  kubernetes-capacity.md  kubernetes-cloud-native-security.md  kubernetes-cloud-native-topology.md  kubernetes-gitops-drift.md  modular-virtualized-frontend.md  release-packaging-certification.md  release-security-certification.md  transactional-outbox-workers.md
docs/ga/: ADMINISTRATION.md  API_GUIDE.md  DISASTER_RECOVERY.md  INSTALLATION.md  OPERATIONS.md  README.md  SUPPORT.md  TROUBLESHOOTING.md  UPGRADE.md  USER_GUIDE.md  documentation-manifest.json
docs/operations/: api-documentation-organization.md  certificate-pki.md  dependency-graph.md  enterprise-capacity-profile.json  enterprise-regional-discovery-routing.md  finops-costs-showback.md  flow-matrix.md  frontend-performance.md  greenops-energy-capacity.md  keyset-pagination-streaming.md  kubernetes-capacity.md  kubernetes-gitops-drift.md  kubernetes-security-correlation.md  kubernetes-topology.md  multisite-chaos-profile.json  multisite-disaster-recovery.md  multisite-observability-profile.json  network-config-compliance.md  postgresql-read-routing.md  pra-pca-profile.json  pro-centralized-multisite.md  rag-governed-assistant.md  responsive-navigation.md  sbom-vulnerabilities-exposure.md  simulation-migration-planning.md  web-loading-performance.md
docs/release/: advanced-identity-oracle-promotion-policy.json  cloud-native-promotion-policy.json  contract-completeness-promotion-policy.json  contract-proof-registry-v4.12.csv  enterprise-scaleout-promotion-policy.json  ga-go-no-go-policy.json  ga-trust-policy.schema.json  offline-runtime-licensing-promotion-policy.json  rsot-canonical-promotion-policy.json  support-maintenance-policy.json
docs/runbooks/: ADVANCED_IDENTITY_ORACLE_SYSTEMD.md  APPLICATION_CHANGE_IMPACT.md  ASYNC_BULK_IMPORTS.md  ASYNC_WORKERS.md  CLOUD_NATIVE_PROMOTION.md  CONTRACT_COMPLETENESS_PROMOTION.md  DCIM_FLOOR_NOMENCLATURE.md  DCIM_LOCATION_IPAM_CONCURRENCY.md  DCIM_PLACEMENT_RECOMMENDATIONS.md  DISCOVERY_ENTERPRISE_AGENT.md  DISCOVERY_JOB_RESILIENCE.md  DISCOVERY_LOCAL.md  DISCOVERY_RECONCILIATION.md  DISTRIBUTED_DISCOVERY_RESULTS.md  EDITIONS_FEATURE_GATES.md  ENTERPRISE_SCALEOUT_PROMOTION.md  EXPORTS_ASYNC_STREAMING.md  FIELD_OPERATIONS.md  GA_GO_NO_GO.md  GOVERNED_RAG_ASSISTANT.md  HIGH_PERFORMANCE_RUNTIME.md  IMPORTS_BULK_ROLLBACK.md  IMPORTS_MIGRATION_GUIDES.md  INSTALLERS.md  INTEGRATIONS_ITSM_GLPI_FRESHSERVICE.md  INTEGRATIONS_ITSM_JIRA.md  INTEGRATIONS_ITSM_OPENSERVICE.md  INTEGRATIONS_ITSM_SERVICENOW.md  IPAM_DDI_SYNCHRONIZATION.md  ITAM_TENANTS.md  MULTISITE_CHAOS.md  MULTISITE_OBSERVABILITY.md  OBSERVABILITY_CAPACITY.md  OFFLINE_RUNTIME_LICENSING.md  POSTGRESQL_CLUSTER.md  PRA_PCA_CERTIFICATION.md  RELEASE_PACKAGING.md  RELEASE_SECURITY.md  RSOT_CANONICAL_MIGRATION.md  RSOT_QUALITY_CERTIFICATION.md  (+9 more)
docs/ui/: MANAGEMENT_CONTEXT_HIERARCHY.md  OPENINFRA_WEB.md  WEB_ACCESSIBILITY.md
installers/requirements/: agent.txt  auth-ldap.txt  auth-saml.txt  backend.txt  common.txt  database-oracle.txt  enterprise-agent.txt  enterprise-server.txt  enterprise-web.txt  lite-all-in-one.txt  pro-server.txt  pro-web.txt  web.txt
requirements/: auth-ldap.txt  dev.txt  postgresql.txt  runtime.txt  security-audit.txt
scripts/: assemble_cloud_native_promotion_evidence.py  assemble_enterprise_capacity_evidence.py  assemble_multisite_chaos_evidence.py  assemble_pra_pca_evidence.py  assemble_scaleout_promotion_evidence.py  benchmark_cursor_pagination.py  benchmark_dependency_graph.py  benchmark_high_performance_runtime.py  build_migration_catalog.py  certify_cloud_native_promotion.py  certify_enterprise_capacity.py  certify_multisite_chaos.py  certify_pra_pca.py  certify_scaleout_promotion.py  docker_environment.py  ga_go_no_go.py  generate_oracle_migrations.py  isolated_wheel_smoke.py  native_runtime_smoke.py  quality_gate.py  release_packaging_audit.py  release_security_audit.py  run_cloud_native_qualification.py  run_enterprise_benchmark_suite.py  run_enterprise_capacity_profile.py  run_enterprise_chaos_profile.py  run_enterprise_workload_benchmark.py  run_multisite_chaos_campaign.py  security_gate.py  security_http_probe.py  smoke_installed_wheel.py  support_readiness.py  validate_autonomous_installer.py  validate_cloud_native_promotion.py  validate_coverage.py  validate_docker_build_context.py  validate_enterprise_alignment.py  validate_frontend.py  validate_ga_documentation.py  validate_kubernetes_capacity.py  (+12 more)
src/openinfra/: __init__.py  (+1 more)
tests/: frontend_contract_sources.py  runtime_i18n_contract.py
web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
(+1160 files in other folders)
