[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "openinfra"
version = "0.33.12"
description = "OpenInfra Python POO IT ressources management, DCIM and IPAM foundation"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
authors = [{ name = "OpenInfra Project" }]
keywords = ["dcim", "itam", "ipam", "ressources-inventory", "postgresql", "openinfra"]
dependencies = [
  "defusedxml>=0.7.1",
  "cryptography>=48.0.1,<50.0",
  "httpx>=0.28,<1.0",
  "uvicorn>=0.30,<1.0",
  "prometheus-client>=0.25,<1.0",
  "opentelemetry-api>=1.42,<2.0",
  "opentelemetry-sdk>=1.42,<2.0",
  "opentelemetry-exporter-otlp-proto-http>=1.42,<2.0",
]

[project.optional-dependencies]
postgresql = ["psycopg[binary]>=3.2", "psycopg_pool>=3.2"]
ldap = ["ldap3>=2.9"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "bandit>=1.7",
  "pip-audit>=2.10.1",
  "build>=1.2",
  "PyYAML>=6.0",
  "urllib3>=2.7.0,<3.0",
]

[project.scripts]
openinfra = "openinfra.interfaces.cli:OpenInfraCLI.main"
openinfra-api = "openinfra.interfaces.http_api:OpenInfraApiEntrypoint.main"
openinfra-web = "openinfra.interfaces.web:OpenInfraWebEntrypoint.main"
openinfra-runtime-secrets = "openinfra.infrastructure.runtime_secrets:RuntimeSecretsCli.main"

[tool.hatch.build.targets.wheel]
packages = ["src/openinfra"]

[tool.hatch.build.targets.wheel.force-include]
"installers/migrations/postgresql" = "openinfra/migrations/postgresql"
"docs/api/openapi.yaml" = "openinfra/api/openapi.yaml"
"docs/ga" = "openinfra/docs/ga"
"docs/release" = "openinfra/docs/release"
"docs/runbooks/GA_GO_NO_GO.md" = "openinfra/docs/runbooks/GA_GO_NO_GO.md"
"docs/runbooks/SUPPORT_MAINTENANCE.md" = "openinfra/docs/runbooks/SUPPORT_MAINTENANCE.md"
"docs/runbooks/ENTERPRISE_SCALEOUT_PROMOTION.md" = "openinfra/docs/runbooks/ENTERPRISE_SCALEOUT_PROMOTION.md"
"docs/runbooks/CLOUD_NATIVE_PROMOTION.md" = "openinfra/docs/runbooks/CLOUD_NATIVE_PROMOTION.md"

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "scripts", "docker", "installers", "docs", "web", "requirements", ".github", "README.md", "LICENSE", "VERSION", "CHANGELOG.md", "VALIDATION-REPORT.md", "compose.yaml", "Dockerfile", ".env.example"]

[tool.pytest.ini_options]
addopts = "-q --cov=src/openinfra --cov-report=term-missing --cov-fail-under=98"
testpaths = ["tests"]
python_classes = ["Test*"]
python_files = ["test_*.py"]

[tool.coverage.run]
branch = false
source = ["src/openinfra"]
omit = ["src/openinfra/infrastructure/postgresql.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = ['if TYPE_CHECKING:', 'raise TypeError\("adapter contract invoked directly"\)']

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "scripts", "installers"]

[tool.ruff.lint]
select = ["A", "ARG", "B", "C4", "E", "F", "I", "N", "PL", "PTH", "RUF", "S", "SIM", "T20", "UP", "W"]
ignore = ["A002", "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"src/openinfra/interfaces/cli.py" = ["ARG002", "T201"]
"src/openinfra/infrastructure/postgresql.py" = ["ARG002", "S608"]
"src/openinfra/interfaces/http_api.py" = ["ARG002", "N802"]
"src/openinfra/interfaces/web.py" = ["N802"]
"tests/**/*.py" = ["ARG005", "B017", "E501", "F841", "N802", "PLC0415", "PLR0912", "PLR0915", "RUF012", "S101", "S105", "S310", "S603"]
"scripts/**/*.py" = ["PTH", "S310", "S404", "S603", "S607", "T201"]
"docker/**/*.py" = ["S310", "S404", "S603", "S607", "T201"]
"installers/**/*.py" = ["PTH", "S103", "S404", "S603", "S607", "T201"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
mypy_path = "src"
packages = ["openinfra"]

[tool.bandit]
skips = ["B101"]
exclude_dirs = ["tests"]

[[tool.mypy.overrides]]
module = ["defusedxml", "defusedxml.*"]
ignore_missing_imports = true
