[build-system]
requires = ["setuptools>=82", "wheel>=0.46"]
build-backend = "openinfra_build_backend"
backend-path = ["."]

[project]
name = "openinfra"
version = "0.34.20"
description = "OpenInfra Python POO RSOT, DCIM and IPAM foundation"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
authors = [{ name = "OpenInfra Project" }]
keywords = ["dcim", "itam", "ipam", "rsot", "postgresql", "openinfra"]
dependencies = [
  "defusedxml>=0.7.1",
  "cryptography>=48.0.1,<50.0",
  "httpx>=0.28,<1.0",
  "uvicorn>=0.30,<1.0",
  "prometheus-client>=0.25,<1.0",
  "opentelemetry-api>=1.42,<2.0",
  "opentelemetry-sdk>=1.42,<2.0",
  "opentelemetry-exporter-otlp-proto-http>=1.42,<2.0",
]

[project.optional-dependencies]
postgresql = ["psycopg[binary]>=3.2", "psycopg_pool>=3.2"]
oracle = ["oracledb>=2.5,<4.0"]
ldap = ["ldap3>=2.9"]
saml = ["python3-saml>=1.16,<2.0"]
advanced-identity = ["ldap3>=2.9", "python3-saml>=1.16,<2.0"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-xdist>=3.6",
  "ruff>=0.5",
  "mypy>=1.10",
  "bandit>=1.7",
  "pip-audit>=2.10.1",
  "build>=1.2",
  "twine>=6.0",
  "PyYAML>=6.0",
  "urllib3>=2.7.0,<3.0",
]

[project.scripts]
openinfra = "openinfra.interfaces.cli:OpenInfraCLI.main"
openinfra-api = "openinfra.interfaces.http_api:OpenInfraApiEntrypoint.main"
openinfra-web = "openinfra.interfaces.web:OpenInfraWebEntrypoint.main"
openinfra-runtime-secrets = "openinfra.infrastructure.runtime_secrets:RuntimeSecretsCli.main"
openinfra-server-runtime = "openinfra.interfaces.server_runtime:OpenInfraServerRuntime.main"
openinfra-gate11 = "openinfra.quality.advanced_identity_oracle_promotion:Gate11QualificationCli.main"
openinfra-gate12 = "openinfra.quality.offline_licensing_promotion:Gate12QualificationCli.main"
openinfra-gate13 = "openinfra.quality.rsot_canonical_promotion:Gate13QualificationCli.main"
openinfra-gate14 = "openinfra.quality.contract_completeness_promotion:Gate14QualificationCli.main"

[tool.hatch.build.targets.wheel]
packages = ["src/openinfra"]

[tool.hatch.build.targets.wheel.force-include]
"installers/migrations/postgresql" = "openinfra/migrations/postgresql"
"installers/migrations/oracle" = "openinfra/migrations/oracle"
"docs/api/openapi.yaml" = "openinfra/api/openapi.yaml"
"docs/ga" = "openinfra/docs/ga"
"docs/release" = "openinfra/docs/release"
"docs/runbooks/GA_GO_NO_GO.md" = "openinfra/docs/runbooks/GA_GO_NO_GO.md"
"docs/runbooks/SUPPORT_MAINTENANCE.md" = "openinfra/docs/runbooks/SUPPORT_MAINTENANCE.md"
"docs/runbooks/ENTERPRISE_SCALEOUT_PROMOTION.md" = "openinfra/docs/runbooks/ENTERPRISE_SCALEOUT_PROMOTION.md"
"docs/runbooks/CLOUD_NATIVE_PROMOTION.md" = "openinfra/docs/runbooks/CLOUD_NATIVE_PROMOTION.md"
"docs/runbooks/RUNTIME_NATIVE.md" = "openinfra/docs/runbooks/RUNTIME_NATIVE.md"
"docs/runbooks/ADVANCED_IDENTITY_ORACLE_SYSTEMD.md" = "openinfra/docs/runbooks/ADVANCED_IDENTITY_ORACLE_SYSTEMD.md"
"docs/runbooks/OFFLINE_RUNTIME_LICENSING.md" = "openinfra/docs/runbooks/OFFLINE_RUNTIME_LICENSING.md"
"docs/runbooks/RSOT_CANONICAL_MIGRATION.md" = "openinfra/docs/runbooks/RSOT_CANONICAL_MIGRATION.md"
"docs/runbooks/CONTRACT_COMPLETENESS_PROMOTION.md" = "openinfra/docs/runbooks/CONTRACT_COMPLETENESS_PROMOTION.md"
"docs/runbooks/ASYNC_BULK_IMPORTS.md" = "openinfra/docs/runbooks/ASYNC_BULK_IMPORTS.md"
"docs/runbooks/DISTRIBUTED_DISCOVERY_RESULTS.md" = "openinfra/docs/runbooks/DISTRIBUTED_DISCOVERY_RESULTS.md"
"docs/runbooks/APPLICATION_CHANGE_IMPACT.md" = "openinfra/docs/runbooks/APPLICATION_CHANGE_IMPACT.md"
"docs/runbooks/RSOT_TIME_TRAVEL.md" = "openinfra/docs/runbooks/RSOT_TIME_TRAVEL.md"
"docs/runbooks/GOVERNED_RAG_ASSISTANT.md" = "openinfra/docs/runbooks/GOVERNED_RAG_ASSISTANT.md"
"docs/runbooks/RSOT_QUALITY_CERTIFICATION.md" = "openinfra/docs/runbooks/RSOT_QUALITY_CERTIFICATION.md"
"docs/runbooks/RSOT_QUALITY_RBAC.md" = "openinfra/docs/runbooks/RSOT_QUALITY_RBAC.md"
"docs/runbooks/RSOT_QUALITY_NON_AUTHORITATIVE_SOURCE.md" = "openinfra/docs/runbooks/RSOT_QUALITY_NON_AUTHORITATIVE_SOURCE.md"
"docs/runbooks/DCIM_PLACEMENT_RECOMMENDATIONS.md" = "openinfra/docs/runbooks/DCIM_PLACEMENT_RECOMMENDATIONS.md"
"docs/runbooks/DCIM_LOCATION_IPAM_CONCURRENCY.md" = "openinfra/docs/runbooks/DCIM_LOCATION_IPAM_CONCURRENCY.md"
"docs/runbooks/IPAM_DDI_SYNCHRONIZATION.md" = "openinfra/docs/runbooks/IPAM_DDI_SYNCHRONIZATION.md"
"installers/systemd/openinfra-runtime-secrets.service" = "openinfra/systemd/openinfra-runtime-secrets.service"
"installers/systemd/openinfra-migrate.service" = "openinfra/systemd/openinfra-migrate.service"
"installers/systemd/openinfra-team-sync.service" = "openinfra/systemd/openinfra-team-sync.service"
"installers/systemd/openinfra-team-sync.timer" = "openinfra/systemd/openinfra-team-sync.timer"

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "scripts", "docker", "installers", "docs", "web", "requirements", ".github", "README.md", "LICENSE", "VERSION", "CHANGELOG.md", "VALIDATION-REPORT.md", "compose.yaml", "Dockerfile", ".dockerignore", ".env.example"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openinfra = [
  "api/*.yaml",
  "migrations/postgresql/*.sql",
  "migrations/oracle/*.sql",
  "migrations/oracle/*.json",
  "docs/ga/**/*",
  "docs/release/**/*",
  "docs/runbooks/*.md",
  "systemd/*.service",
  "systemd/*.timer",
  "interfaces/rendering/static/**/*",
]

[tool.pytest.ini_options]
addopts = "-q --cov=src/openinfra --cov-report=term-missing --cov-fail-under=98"
testpaths = ["tests"]
python_classes = ["Test*"]
python_files = ["test_*.py"]

[tool.coverage.run]
branch = false
parallel = true
source = ["src/openinfra"]
omit = ["src/openinfra/infrastructure/postgresql.py"]

[tool.coverage.report]
precision = 8
show_missing = true
skip_covered = true
exclude_lines = ['if TYPE_CHECKING:', 'raise TypeError\("adapter contract invoked directly"\)']

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "scripts", "installers"]

[tool.ruff.lint]
select = ["A", "ARG", "B", "C4", "E", "F", "I", "N", "PL", "PTH", "RUF", "S", "SIM", "T20", "UP", "W"]
ignore = ["A002", "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
"src/openinfra/interfaces/cli.py" = ["ARG002", "T201"]
"src/openinfra/infrastructure/postgresql.py" = ["ARG002", "S608"]
"src/openinfra/interfaces/http_api.py" = ["ARG002", "N802"]
"src/openinfra/interfaces/web.py" = ["N802"]
"tests/**/*.py" = ["ARG005", "B017", "E501", "F841", "N802", "PLC0415", "PLR0912", "PLR0915", "RUF012", "S101", "S105", "S310", "S603"]
"scripts/**/*.py" = ["PTH", "S310", "S404", "S603", "S607", "T201"]
"docker/**/*.py" = ["S310", "S404", "S603", "S607", "T201"]
"installers/**/*.py" = ["PTH", "S103", "S404", "S603", "S607", "T201"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
mypy_path = "src"
packages = ["openinfra"]

[tool.bandit]
skips = ["B101"]
exclude_dirs = ["tests"]

[[tool.mypy.overrides]]
module = ["defusedxml", "defusedxml.*"]
ignore_missing_imports = true
